# objrs

./: COPYRIGHT  Cargo.toml  DOCUMENTATION.md  HOW_IT_WORKS.md  README.md  rustfmt.toml
demo/: Cargo.toml  README.md
demo/src/: logo_triangles.i16.xz  main.rs  mesh.rs  render.rs
frameworks/app_kit/: Cargo.toml  README.md
frameworks/app_kit/src/: lib.rs  nsapplication.rs  nsapplication_delegate.rs  nsmenu.rs  nsmenu_item.rs  nsresponder.rs  nsview.rs  nsview_controller.rs  nswindow.rs
frameworks/core_graphics/: Cargo.toml  LICENSE_MPL  README.md
frameworks/core_graphics/src/: cgbase.rs  cggeometry.rs  lib.rs
frameworks/foundation/: Cargo.toml  LICENSE-MPL  README.md
frameworks/foundation/macros/: Cargo.toml  LICENSE-MPL  LICENSE_APACHE  LICENSE_MPL
frameworks/foundation/macros/src/: lib.rs
frameworks/foundation/src/: lib.rs  nsarray.rs  nserror.rs  nsgeometry.rs  nsmutable_string.rs  nsnotification.rs  nsobject.rs  nsprocess_info.rs  nsstring.rs
frameworks/metal/: Cargo.toml  README.md
frameworks/metal/src/: lib.rs  mtlblit_command_encoder.rs  mtlbuffer.rs  mtlcommand_buffer.rs  mtlcommand_encoder.rs  mtlcommand_queue.rs  mtlcompile_options.rs  mtldevice.rs  mtldrawable.rs  mtllibrary.rs  mtlpixel_format.rs  mtlrender_command_encoder.rs  mtlrender_pass.rs  mtlrender_pipeline.rs  mtlresource.rs
frameworks/metal_kit/: Cargo.toml  README.md
frameworks/metal_kit/src/: lib.rs  mtkview.rs  mtkview_delegate.rs
macos/: Cargo.toml  cp_sources.sh
macos/src/: AppKit.rs  CoreData.rs  CoreFoundation.rs  CoreGraphics.rs  CoreImage.rs  CoreVideo.rs  DiskArbitration.rs  Foundation.rs  IOSurface.rs  ImageIO.rs  MacTypes.rs  Metal.rs  MetalKit.rs  ModelIO.rs  NSObject.rs  OpenGL.rs  QuartzCore.rs  Security.rs  acl.rs  hfs_unistr.rs  lib.rs  message.rs  objc.rs  top.rs  types.rs
macos/src/CoreServices/: AE.rs  CarbonCore.rs  DictionaryServices.rs  FSEvents.rs  LaunchServices.rs  Metadata.rs  OSServices.rs  SearchKit.rs  SharedFileList.rs  mod.rs
macos_demo/: Cargo.toml  README.md
macos_demo/src/: main.rs  render.rs
macros/: Cargo.toml
macros/src/: class.rs  class_impl.rs  gensym.rs  ivar.rs  lib.rs  parser.rs  property.rs  protocol.rs  selector.rs  span_ext.rs  test.rs  util.rs
macros/src/parse/: attr.rs  class_attr.rs  class_ref_attr.rs  drain_ext.rs  impl_attr.rs  ivar_attr.rs  mod.rs  property_attr.rs  protocol_attr.rs  sel_ref_attr.rs  selector_attr.rs  util.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  message.rs  objc.rs  objc_abi.rs  objc_exception.rs  objc_internal.rs  objc_runtime_new.rs  runtime.rs
rustkit/: Cargo.toml  README_OBJRS.md  build.rs  libclang.sh
rustkit/rustkit_bindgen/: Cargo.toml
rustkit/rustkit_bindgen/src/: lib.rs
rustkit/src/: lib.rs  main.rs
src/: __objrs.rs  arc.rs  cstr.rs  exception.rs  lib.rs  marker.rs  test.rs  type_encoding.rs
src/runtime/: message.rs  mod.rs  objc.rs  objc_abi.rs  objc_exception.rs  objc_internal.rs  objc_runtime_new.rs  runtime.rs
test/: Cargo.toml
test/src/: class.rs  main.rs  no_prelude.rs  nsobject.rs  selector.rs  simple.rs
test_utils/: Cargo.toml  LICENSE_MPL
test_utils/src/: diff.rs  fake_gensym.rs  fmt_tokens.rs  lib.rs
tiny_test/: Cargo.toml
tiny_test/src/: main.rs
utils/: Cargo.toml
utils/src/: gensym.rs  lib.rs
