# The contents of this file is licensed by its authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option. The
# contents of this file may not be copied, modified, or distributed except according to those terms.
# See the COPYRIGHT file at the top-level directory of this distribution for copies of these
# licenses and more information.

[package]
name = "objrs_demo"
version = "0.0.1"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Demonstration of objrs."
repository = "https://gitlab.com/objrs/objrs"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "demo"
path = "src/main.rs"
doc = false

[dependencies]
objrs = { path = "..", version = "0.0.1" }
objrs_frameworks_app_kit = { path = "../frameworks/app_kit", version = "0.0.1" }
objrs_frameworks_core_graphics = { path = "../frameworks/core_graphics", version = "0.0.1" }
objrs_frameworks_foundation = { path = "../frameworks/foundation", version = "0.0.1" }
objrs_frameworks_metal = { path = "../frameworks/metal", version = "0.0.1" }
objrs_frameworks_metal_kit = { path = "../frameworks/metal_kit", version = "0.0.1" }
