# This file and its contents are licensed by their authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option, and
# may not be copied, modified, or distributed except according to those terms. For copies of these
# licenses and more information, see the COPYRIGHT file in this distribution's top-level directory.

[package]
name = "objrs_demo"
version = "0.0.3-dev"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Demonstration of objrs."
repository = "https://gitlab.com/objrs/objrs"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "demo"
path = "src/main.rs"
doc = false

[dependencies]
objrs = { path = "..", version = "0.0.3-dev" }
objrs_frameworks_app_kit = { path = "../frameworks/app_kit", version = "0.0.3-dev" }
objrs_frameworks_core_graphics = { path = "../frameworks/core_graphics", version = "0.0.3-dev" }
objrs_frameworks_foundation = { path = "../frameworks/foundation", version = "0.0.3-dev" }
objrs_frameworks_metal = { path = "../frameworks/metal", version = "0.0.3-dev" }
objrs_frameworks_metal_kit = { path = "../frameworks/metal_kit", version = "0.0.3-dev" }
