[package]
name = "macos"
version = "0.0.2"
authors = ["coolbluewater <56218503+coolbluewater@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Bindings for Apple's MacOS frameworks."
readme = "README.md"
keywords = ["objc", "objective-c", "macos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
libc = "0.2.66"
objrs = { path = "../", version = "0.0.3-dev" }