# This file and its contents are licensed by their authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option, and
# may not be copied, modified, or distributed except according to those terms. For copies of these
# licenses and more information, see the COPYRIGHT file in this distribution's top-level directory.

[package]
name = "objrs_macros"
version = "0.0.2"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Macro magic for objrs."

[dependencies]
proc-macro2 = { version = "0.4", features = ["nightly"] }
quote = { version = "0.6" }
syn = { version = "0.15", features = ["full", "visit-mut", "extra-traits"] }

[lib]
proc-macro = true
