# The contents of this file is licensed by its authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option. The
# contents of this file may not be copied, modified, or distributed except according to those terms.
# See the COPYRIGHT file at the top-level directory of this distribution for copies of these
# licenses and more information.

[package]
name = "objrs_test"
version = "0.0.1"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Tiny test of objrs."

[[bin]]
name = "test"
path = "src/main.rs"
doc = false

[dependencies]
libc = { version = "0.2", default-features = false }
objrs = { path = "..", version = "0.0.1" }
objrs_frameworks_foundation = { path = "../frameworks/foundation", version = "0.0.1" }
