# This file and its contents are licensed by their authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option, and
# may not be copied, modified, or distributed except according to those terms. For copies of these
# licenses and more information, see the COPYRIGHT file in this distribution's top-level directory.

[package]
name = "objrs_tiny_test"
version = "0.0.3-dev"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Tiny test of objrs."

[[bin]]
name = "test"
path = "src/main.rs"
doc = false

[dependencies]
libc = { version = "0.2", default-features = false }
objrs = { path = "..", version = "0.0.3-dev" }
