[package]
name = "rustkit_bindgen"
version = "0.0.1"
authors = ["Michael Wu <mwu.code@gmail.com>"]
description = "The bindings generator used by RustKit"
repository = "https://github.com/michaelwu/RustKit"
license = "Apache-2.0/MIT"

[dependencies]
rustkit-clang-sys = { version = "0.24", features = ["runtime", "clang_8_0"] }
syn = { version = "1.0.11", features = ["full", "derive", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
indexmap = "1.3.0"

[features]
default = ["objrs"]
# Create bindings for objrs instead of rustkit
# Note: this is also specified in the parent crate.
objrs = []
