# This file and its contents are licensed by their authors and copyright holders under the Apache
# License (Version 2.0), MIT license, or Mozilla Public License (Version 2.0), at your option, and
# may not be copied, modified, or distributed except according to those terms. For copies of these
# licenses and more information, see the COPYRIGHT file in this distribution's top-level directory.

[package]
name = "objrs_frameworks_foundation_macros"
version = "0.0.3-dev"
authors = ["Michael Bradshaw <mjbshaw@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR MPL-2.0"
description = "Macro magic for things like compile-time NSStrings."

[dependencies]
objrs_utils = { path = "../../../utils", version = "0.0.3-dev" }
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
objrs_test_utils = { path = "../../../test_utils", version = "0.0.3-dev" }

[lib]
proc-macro = true
